crates/zerodds-c-api/include/zerodds.h

/*
 * zerodds.h — ZeroDDS C-FFI (auto-generated by cbindgen, do not edit).
 *
 * This header is the language-agnostic hub used by:
 *  - C++ binding (psm-cxx Method-Bodies in `crates/cpp/`)
 *  - C# binding (P/Invoke wrapper in `crates/cs/`)
 *  - TypeScript binding (node-ffi-napi + WASM, `crates/ts-node-runtime/`)
 *  - Embedded C clients
 *  - Apex.AI performance_test ZeroDDS-Plugin
 *  - ROS 2 RMW adapter (rmw_zerodds)
 *
 * Java + Python use their own native bridges (jni-rs / pyo3) and
 * do NOT go through this header.
 *
 * Memory ownership: handles returned by zerodds_*_create() must be
 * released with the matching zerodds_*_destroy() — no auto-cleanup
 * on FFI boundaries. Bytes returned via zerodds_reader_take() must
 * be released with zerodds_buffer_free().
 */

/*
 * Condition handle types are OPAQUE on the C ABI (the binding holds an
 * opaque pointer only). On the Rust side they are repr(C) so the generic
 * condition dispatcher can read the ConditionKind discriminant at offset 0,
 * but their fields (incl. String/Vec in QueryCondition) must NOT leak into
 * this header - hence they are excluded from cbindgen and forward-declared
 * here. See crates/zerodds-c-api/src/condition_ffi.rs (F-PSM-CXX-readcond-segv).
 */
typedef struct zerodds_ZeroDdsGuardCondition zerodds_ZeroDdsGuardCondition;
typedef struct zerodds_ZeroDdsReadCondition zerodds_ZeroDdsReadCondition;
typedef struct zerodds_ZeroDdsQueryCondition zerodds_ZeroDdsQueryCondition;
/**
 * ContentFilteredTopic (Spec §2.2.2.3.3).
 */
typedef struct zerodds_ZeroDdsContentFilteredTopic zerodds_ZeroDdsContentFilteredTopic;
/**
 * DataReader (Spec §2.2.2.5.2).
 */
typedef struct zerodds_ZeroDdsDataReader zerodds_ZeroDdsDataReader;
/**
 * DataWriter (Spec §2.2.2.4.2).
 */
typedef struct zerodds_ZeroDdsDataWriter zerodds_ZeroDdsDataWriter;
/**
 * DomainParticipant (Spec §2.2.2.2.1.1).
 */
typedef struct zerodds_ZeroDdsDomainParticipant zerodds_ZeroDdsDomainParticipant;
/**
 * Subscriber (Spec §2.2.2.5.1).
 */
typedef struct zerodds_ZeroDdsSubscriber zerodds_ZeroDdsSubscriber;
/**
 * Topic (Spec §2.2.2.3.1).
 */
typedef struct zerodds_ZeroDdsTopic zerodds_ZeroDdsTopic;
/**
 * WaitSet (Spec §2.2.2.1.2.1.5).
 */
typedef struct zerodds_ZeroDdsWaitSet zerodds_ZeroDdsWaitSet;
/**
 * DataReaderQos.
 */
typedef struct zerodds_ZeroDdsDataReaderQos {
  /**
   * Reliability.
   */
  struct zerodds_ZeroDdsReliabilityQosPolicy reliability;
  /**
   * Durability.
   */
  struct zerodds_ZeroDdsDurabilityQosPolicy durability;
  /**
   * Deadline.
   */
  struct zerodds_ZeroDdsDeadlineQosPolicy deadline;
  /**
   * LatencyBudget.
   */
  struct zerodds_ZeroDdsLatencyBudgetQosPolicy latency_budget;
  /**
   * Liveliness.
   */
  struct zerodds_ZeroDdsLivelinessQosPolicy liveliness;
  /**
   * DestinationOrder.
   */
  struct zerodds_ZeroDdsDestinationOrderQosPolicy destination_order;
  /**
   * Ownership.
   */
  struct zerodds_ZeroDdsOwnershipQosPolicy ownership;
  /**
   * Partition.
   */
  struct zerodds_ZeroDdsPartitionQosPolicy partition;
  /**
   * Presentation.
   */
  struct zerodds_ZeroDdsPresentationQosPolicy presentation;
  /**
   * History.
   */
  struct zerodds_ZeroDdsHistoryQosPolicy history;
  /**
   * ResourceLimits.
   */
  struct zerodds_ZeroDdsResourceLimitsQosPolicy resource_limits;
  /**
   * TimeBasedFilter.
   */
  struct zerodds_ZeroDdsTimeBasedFilterQosPolicy time_based_filter;
  /**
   * ReaderDataLifecycle.
   */
  struct zerodds_ZeroDdsReaderDataLifecycleQosPolicy reader_data_lifecycle;
  /**
   * UserData.
   */
  struct zerodds_ZeroDdsUserDataQosPolicy user_data;
  /**
   * TopicData.
   */
  zerodds_ZeroDdsTopicDataQosPolicy topic_data;
  /**
   * GroupData.
   */
  zerodds_ZeroDdsGroupDataQosPolicy group_data;
} zerodds_ZeroDdsDataReaderQos;
/**
 * `DataWriterListener` — Spec §2.2.4.2.5.
 */
typedef struct zerodds_ZeroDdsDataWriterListener {
  /**
   * Caller-State.
   */
  void *user_data;
  /**
   * Liveliness-Lost.
   */
  void (*on_liveliness_lost)(void*, struct zerodds_ZeroDdsDataWriter*);
  /**
   * Offered-Deadline-Missed.
   */
  void (*on_offered_deadline_missed)(void*, struct zerodds_ZeroDdsDataWriter*);
  /**
   * Offered-Incompatible-QoS.
   */
  void (*on_offered_incompatible_qos)(void*, struct zerodds_ZeroDdsDataWriter*);
  /**
   * Publication-Matched.
   */
  void (*on_publication_matched)(void*, struct zerodds_ZeroDdsDataWriter*);
} zerodds_ZeroDdsDataWriterListener;
/**
 * `DataReaderListener` — Spec §2.2.4.2.6.
 */
typedef struct zerodds_ZeroDdsDataReaderListener {
  /**
   * Caller-State.
   */
  void *user_data;
  /**
   * Data-Available.
   */
  void (*on_data_available)(void*, struct zerodds_ZeroDdsDataReader*);
  /**
   * Sample-Rejected.
   */
  void (*on_sample_rejected)(void*, struct zerodds_ZeroDdsDataReader*);
  /**
   * Liveliness-Changed.
   */
  void (*on_liveliness_changed)(void*, struct zerodds_ZeroDdsDataReader*);
  /**
   * Requested-Deadline-Missed.
   */
  void (*on_requested_deadline_missed)(void*, struct zerodds_ZeroDdsDataReader*);
  /**
   * Requested-Incompatible-QoS.
   */
  void (*on_requested_incompatible_qos)(void*, struct zerodds_ZeroDdsDataReader*);
  /**
   * Subscription-Matched.
   */
  void (*on_subscription_matched)(void*, struct zerodds_ZeroDdsDataReader*);
  /**
   * Sample-Lost.
   */
  void (*on_sample_lost)(void*, struct zerodds_ZeroDdsDataReader*);
} zerodds_ZeroDdsDataReaderListener;
/**
 * LivelinessLostStatus (Spec §2.2.4.1).
 */
typedef struct zerodds_ZeroDdsLivelinessLostStatus {
  int32_t total_count;
  int32_t total_count_change;
} zerodds_ZeroDdsLivelinessLostStatus;
/**
 * OfferedDeadlineMissedStatus (Spec §2.2.4.1).
 */
typedef struct zerodds_ZeroDdsOfferedDeadlineMissedStatus {
  int32_t total_count;
  int32_t total_count_change;
  uint64_t last_instance_handle;
} zerodds_ZeroDdsOfferedDeadlineMissedStatus;
/**
 * OfferedIncompatibleQosStatus (Spec §2.2.4.1, without a per-policy list —
 * `last_policy_id` covers the mandatory path).
 */
typedef struct zerodds_ZeroDdsOfferedIncompatibleQosStatus {
  int32_t total_count;
  int32_t total_count_change;
  uint32_t last_policy_id;
} zerodds_ZeroDdsOfferedIncompatibleQosStatus;
/**
 * SampleRejectedStatus.
 */
typedef struct zerodds_ZeroDdsSampleRejectedStatus {
  /**
   * Total cumulative count.
   */
  int32_t total_count;
  /**
   * Change since last read.
   */
  int32_t total_count_change;
  /**
   * Reason kind: 0=NotRejected, 1=ByInstancesLimit, 2=BySamplesLimit,
   * 3=BySamplesPerInstanceLimit.
   */
  uint32_t last_reason;
  /**
   * Last instance handle.
   */
  uint64_t last_instance_handle;
} zerodds_ZeroDdsSampleRejectedStatus;
/**
 * Reads the current trigger status of a condition (Spec §2.2.2.1.2.1.1).
 *
 * # Safety
 * `c` valid or NULL.
 */
bool zerodds_condition_get_trigger_value(const void *c);
/**
 * Creates a GuardCondition.
 */
zerodds_ZeroDdsGuardCondition *zerodds_guardcondition_create(void);
/**
 * Deletes a GuardCondition.
 *
 * # Safety
 * `g` must come from `zerodds_guardcondition_create`.
 */
void zerodds_guardcondition_destroy(zerodds_ZeroDdsGuardCondition *g);
/**
 * Sets the trigger value.
 *
 * # Safety
 * `g` valid.
 */
int zerodds_guardcondition_set_trigger_value(zerodds_ZeroDdsGuardCondition *g, bool v);
/**
 * Creates a ReadCondition (Spec §2.2.2.5.2.4).
 *
 * # Safety
 * `dr` valid.
 */
zerodds_ZeroDdsReadCondition *zerodds_dr_create_readcondition(struct zerodds_ZeroDdsDataReader *dr,
                                                              uint32_t sample_states,
                                                              uint32_t view_states,
                                                              uint32_t instance_states);
/**
 * Creates a QueryCondition (Spec §2.2.2.5.2.5).
 *
 * # Safety
 * `dr`, `expr` valid; `params[0..param_count]` valid.
 */
zerodds_ZeroDdsQueryCondition *zerodds_dr_create_querycondition(struct zerodds_ZeroDdsDataReader *dr,
                                                                uint32_t sample_states,
                                                                uint32_t view_states,
                                                                uint32_t instance_states,
                                                                const char *expr,
                                                                const char *const *params,
                                                                uintptr_t param_count);
/**
 * Deletes a ReadCondition or QueryCondition.
 *
 * # Safety
 * `c` valid; must come from `dr_create_readcondition` or
 * `dr_create_querycondition`.
 */
int zerodds_dr_delete_readcondition(struct zerodds_ZeroDdsDataReader *_dr, void *c);
/**
 * Creates a WaitSet.
 */
struct zerodds_ZeroDdsWaitSet *zerodds_waitset_create(void);
/**
 * Deletes a WaitSet.
 *
 * # Safety
 * `w` valid.
 */
void zerodds_waitset_destroy(struct zerodds_ZeroDdsWaitSet *w);
/**
 * Attach Condition.
 *
 * # Safety
 * `w`, `cond` valid.
 */
int zerodds_waitset_attach_condition(struct zerodds_ZeroDdsWaitSet *w, void *cond);
/**
 * Detach Condition.
 *
 * # Safety
 * `w`, `cond` valid.
 */
int zerodds_waitset_detach_condition(struct zerodds_ZeroDdsWaitSet *w, void *cond);
/**
 * Waits until at least one condition triggers or a timeout.
 * Writes active conditions into `out_active[0..*out_count]`.
 *
 * # Safety
 * `w`, `out_active`, `out_count`, `timeout` valid.
 */
int zerodds_waitset_wait(struct zerodds_ZeroDdsWaitSet *w,
                         void **out_active,
                         uintptr_t cap,
                         uintptr_t *out_count,
                         int32_t timeout_sec,
                         uint32_t timeout_nanosec);
/**
 * `dw_set_listener`.
 *
 * # Safety
 * `dw` valide.
 */
int zerodds_dw_set_listener(struct zerodds_ZeroDdsDataWriter *dw,
                            const struct zerodds_ZeroDdsDataWriterListener *l,
                            uint32_t status_mask);
/**
 * `dr_set_listener`.
 *
 * # Safety
 * `dr` valide.
 */
int zerodds_dr_set_listener(struct zerodds_ZeroDdsDataReader *dr,
                            const struct zerodds_ZeroDdsDataReaderListener *l,
                            uint32_t status_mask);
/**
 * Polls all registered listeners and fires callbacks on status counter
 * deltas. Each entity level (DataWriter/DataReader) and each aggregator
 * level (Publisher/Subscriber/DomainParticipant/Topic) fires independently
 * — multi-bind semantics, no first-match suppression. Returns the number
 * of callbacks fired.
 *
 * # Safety
 * The caller must guarantee that every entity pointer registered in the
 * registry (including the contained child entities) and every listener
 * pointer is still valid (not freed via `*_destroy` without a preceding
 * `set_listener(NULL)`).
 */
uintptr_t zerodds_poll_listeners(void);
/**
 * Creates a ContentFilteredTopic.
 *
 * # Safety
 * `p`, `name`, `related`, `filter_expression` valid.
 */
struct zerodds_ZeroDdsContentFilteredTopic *zerodds_dp_create_contentfilteredtopic(struct zerodds_ZeroDdsDomainParticipant *p,
                                                                                   const char *name,
                                                                                   struct zerodds_ZeroDdsTopic *related,
                                                                                   const char *filter_expression,
                                                                                   const char *const *parameters,
                                                                                   uintptr_t param_count);
/**
 * Sets the positional CDR field schema on a ContentFilteredTopic so the
 * untyped C-FFI filter actually evaluates the payload (Spec §2.2.2.3.3).
 *
 * `names[i]` is the field name referenced by the filter expression;
 * `kinds[i]` is its CDR encoding (0=bool, 1=int32, 2=int64, 3=float32,
 * 4=float64, 5=string). The fields MUST be listed in their on-wire
 * declaration order, starting from the first member of the payload.
 *
 * This variant assumes a `@final` payload (no leading DHEADER, offset 0). For
 * an `@appendable`/`@mutable` payload use [`zerodds_cft_set_schema_ex`].
 *
 * Note: filter literals are passed as-is — the SQL `WHERE` expression carries
 * its own typed literals (e.g. `seq > 4`, `name = 'foo'`); the schema only
 * declares how to decode the payload columns, it does not coerce the literals.
 *
 * # Safety
 * `cft` valid; `names[0..count]` valid NUL-terminated C strings;
 * `kinds[0..count]` readable.
 */
int zerodds_cft_set_schema(struct zerodds_ZeroDdsContentFilteredTopic *cft,
                           const char *const *names,
                           const uint32_t *kinds,
                           uintptr_t count);
/**
 * Deletes a ContentFilteredTopic.
 *
 * # Safety
 * Both handles valid.
 */
int zerodds_dp_delete_contentfilteredtopic(struct zerodds_ZeroDdsDomainParticipant *p,
                                           struct zerodds_ZeroDdsContentFilteredTopic *cft);
/**
 * `LIVELINESS_LOST_STATUS` (Spec §2.2.2.4.2.x).
 *
 * # Safety
 * `dw` and `out` valid.
 */
int zerodds_dw_get_liveliness_lost_status(struct zerodds_ZeroDdsDataWriter *dw,
                                          struct zerodds_ZeroDdsLivelinessLostStatus *out);
/**
 * `OFFERED_DEADLINE_MISSED_STATUS`.
 *
 * # Safety
 * `dw` and `out` valid.
 */
int zerodds_dw_get_offered_deadline_missed_status(struct zerodds_ZeroDdsDataWriter *dw,
                                                  struct zerodds_ZeroDdsOfferedDeadlineMissedStatus *out);
/**
 * `OFFERED_INCOMPATIBLE_QOS_STATUS`.
 *
 * # Safety
 * `dw` and `out` valid.
 */
int zerodds_dw_get_offered_incompatible_qos_status(struct zerodds_ZeroDdsDataWriter *dw,
                                                   struct zerodds_ZeroDdsOfferedIncompatibleQosStatus *out);
/**
 * Creates a DataReader on a ContentFilteredTopic.
 * On every `take`/`read` the filter expression is evaluated
 * (Spec §2.2.2.3.3 + §2.2.2.5.2.5).
 *
 * # Safety
 * `sub`, `cft` valid; `qos` may be NULL.
 */
struct zerodds_ZeroDdsDataReader *zerodds_sub_create_datareader_with_cft(struct zerodds_ZeroDdsSubscriber *sub,
                                                                         struct zerodds_ZeroDdsContentFilteredTopic *cft,
                                                                         const struct zerodds_ZeroDdsDataReaderQos *qos);
/**
 * `SAMPLE_REJECTED_STATUS`.
 *
 * # Safety
 * `dr` and `out` valid.
 */
int zerodds_dr_get_sample_rejected_status(struct zerodds_ZeroDdsDataReader *dr,
                                          struct zerodds_ZeroDdsSampleRejectedStatus *out);