crates/cs/csharp/ZeroDDS/src/Native.cs


    [StructLayout(LayoutKind.Sequential)]
    public struct SampleRejectedStatus
    {
        public int TotalCount;
        public int TotalCountChange;
        public uint LastReason;
        public ulong LastInstanceHandle;
    }

    [DllImport(LibName, EntryPoint = "zerodds_dr_get_sample_rejected_status")]
    public static extern int DrGetSampleRejectedStatus(IntPtr dr, out SampleRejectedStatus s);

    [StructLayout(LayoutKind.Sequential)]
    public struct LivelinessLostStatus
    {
        public int TotalCount;
        public int TotalCountChange;
    }

    [DllImport(LibName, EntryPoint = "zerodds_dw_get_liveliness_lost_status")]
    public static extern int DwGetLivelinessLostStatus(IntPtr dw, out LivelinessLostStatus s);

    [StructLayout(LayoutKind.Sequential)]
    public struct OfferedDeadlineMissedStatus
    {
        public int TotalCount;
        public int TotalCountChange;
        public ulong LastInstanceHandle;
    }

    [DllImport(LibName, EntryPoint = "zerodds_dw_get_offered_deadline_missed_status")]
    public static extern int DwGetOfferedDeadlineMissedStatus(IntPtr dw,
        out OfferedDeadlineMissedStatus s);

    [StructLayout(LayoutKind.Sequential)]
    public struct OfferedIncompatibleQosStatus
    {
        public int TotalCount;
        public int TotalCountChange;
        public uint LastPolicyId;
    }

    [DllImport(LibName, EntryPoint = "zerodds_dw_get_offered_incompatible_qos_status")]
    public static extern int DwGetOfferedIncompatibleQosStatus(IntPtr dw,
        out OfferedIncompatibleQosStatus s);

    // ====== ReadCondition / QueryCondition ======
    [DllImport(LibName, EntryPoint = "zerodds_dr_create_readcondition")]
    public static extern IntPtr DrCreateReadCondition(IntPtr dr, uint sampleStates,
        uint viewStates, uint instanceStates);

    [DllImport(LibName, EntryPoint = "zerodds_dr_delete_readcondition")]
    public static extern int DrDeleteReadCondition(IntPtr dr, IntPtr cond);

    [DllImport(LibName, EntryPoint = "zerodds_dr_create_querycondition", CharSet = CharSet.Ansi)]
    public static extern IntPtr DrCreateQueryCondition(IntPtr dr, uint sampleStates,
        uint viewStates, uint instanceStates,
        [MarshalAs(UnmanagedType.LPStr)] string expr,
        IntPtr parameters, UIntPtr paramCount);

    // ====== Listener vtable structs ======
    [StructLayout(LayoutKind.Sequential)]
    public struct DataWriterListenerVTable
    {
        public IntPtr UserData;
        public IntPtr OnLivelinessLost;
        public IntPtr OnOfferedDeadlineMissed;
        public IntPtr OnOfferedIncompatibleQos;
        public IntPtr OnPublicationMatched;
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct DataReaderListenerVTable
    {
        public IntPtr UserData;
        public IntPtr OnDataAvailable;
        public IntPtr OnSampleRejected;
        public IntPtr OnLivelinessChanged;
        public IntPtr OnRequestedDeadlineMissed;
        public IntPtr OnRequestedIncompatibleQos;
        public IntPtr OnSubscriptionMatched;
        public IntPtr OnSampleLost;
    }

    [DllImport(LibName, EntryPoint = "zerodds_dw_set_listener")]
    public static extern int DwSetListener(IntPtr dw,
        ref DataWriterListenerVTable listener, uint statusMask);

    [DllImport(LibName, EntryPoint = "zerodds_dw_set_listener")]
    public static extern int DwSetListenerNull(IntPtr dw, IntPtr listener, uint statusMask);

    [DllImport(LibName, EntryPoint = "zerodds_dr_set_listener")]
    public static extern int DrSetListener(IntPtr dr,
        ref DataReaderListenerVTable listener, uint statusMask);

    [DllImport(LibName, EntryPoint = "zerodds_dr_set_listener")]
    public static extern int DrSetListenerNull(IntPtr dr, IntPtr listener, uint statusMask);

    [DllImport(LibName, EntryPoint = "zerodds_poll_listeners")]
    public static extern UIntPtr PollListeners();

    // ====== Conditions / WaitSet ======
    [DllImport(LibName, EntryPoint = "zerodds_guardcondition_create")]
    public static extern IntPtr GuardConditionCreate();

    [DllImport(LibName, EntryPoint = "zerodds_guardcondition_destroy")]
    public static extern void GuardConditionDestroy(IntPtr g);

    [DllImport(LibName, EntryPoint = "zerodds_guardcondition_set_trigger_value")]
    public static extern int GuardConditionSetTrigger(IntPtr g, [MarshalAs(UnmanagedType.U1)] bool v);

    [DllImport(LibName, EntryPoint = "zerodds_condition_get_trigger_value")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static extern bool ConditionGetTrigger(IntPtr c);

    [DllImport(LibName, EntryPoint = "zerodds_waitset_create")]
    public static extern IntPtr WaitSetCreate();

    [DllImport(LibName, EntryPoint = "zerodds_waitset_destroy")]
    public static extern void WaitSetDestroy(IntPtr w);

    [DllImport(LibName, EntryPoint = "zerodds_waitset_attach_condition")]
    public static extern int WaitSetAttach(IntPtr w, IntPtr c);

    [DllImport(LibName, EntryPoint = "zerodds_waitset_detach_condition")]
    public static extern int WaitSetDetach(IntPtr w, IntPtr c);

    [DllImport(LibName, EntryPoint = "zerodds_waitset_wait")]
    public static extern int WaitSetWait(IntPtr w, IntPtr outActive, UIntPtr cap,
        out UIntPtr outCount, int sec, uint nanosec);

    // ====== ContentFilteredTopic (Spec §2.2.2.3.3) ======
    [DllImport(LibName, EntryPoint = "zerodds_dp_create_contentfilteredtopic", CharSet = CharSet.Ansi)]
    public static extern IntPtr DpCreateContentFilteredTopic(IntPtr p,
        [MarshalAs(UnmanagedType.LPStr)] string name,
        IntPtr related,
        [MarshalAs(UnmanagedType.LPStr)] string filterExpression,
        IntPtr parameters, UIntPtr paramCount);

    [DllImport(LibName, EntryPoint = "zerodds_cft_set_schema")]
    public static extern int CftSetSchema(IntPtr cft, IntPtr names, IntPtr kinds, UIntPtr count);

    [DllImport(LibName, EntryPoint = "zerodds_dp_delete_contentfilteredtopic")]
    public static extern int DpDeleteContentFilteredTopic(IntPtr p, IntPtr cft);

    [DllImport(LibName, EntryPoint = "zerodds_sub_create_datareader_with_cft")]
    public static extern IntPtr SubCreateDataReaderWithCft(IntPtr sub, IntPtr cft, IntPtr qos);
}
